--- a/index.html
+++ b/index.html
@@ -7,3 +7,11 @@ image: images/logo.png
 This Blog is to share my projects and studies.
 
 # Posts
+
+<script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
