--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ window.onload = wrap_img;
 
 <h1 id="posts">Posts</h1>
 
+<script src="https://utteranc.es/client.js" repo="[ENTER REPO HERE]" issue-term="pathname" theme="github-light" crossorigin="anonymous" async="">
+</script>
+
+
 
 
   
