--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: home
-search_exclude: true
+search_exclude: false
 image: images/logo.png
 ---
 
-This Blog is to share my projects and studies.
+
 
 # Posts
 
