deploy: a692d0e8dfecf2905cde79021578512079116205

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This Blog is to share my projects and studies.</p>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="posts">Posts</h1>
 
 <script src="https://utteranc.es/client.js" repo="[ENTER REPO HERE]" issue-term="pathname" theme="github-light" crossorigin="anonymous" async="">
 </script>
